# ArduinoCore-host

./: CMakeLists.txt  README.md
api/: CMakeLists.txt  Common.cpp  Print.h  Print_std.h  Stream.h  Stream_std.h  StringHelpers.h  WString.cpp
test/: CMakeLists.txt
test/src/String/: test_move.cpp
test/work/: work1.cpp
